2005-12-01  Daniel Steffen  <das@users.sourceforge.net>

	* unix/tcl.m4 (Darwin): fixed error when MACOSX_DEPLOYMENT_TARGET unset
	* unix/configure: regen.

	* macosx/tkMacOSXCarbonEvents.c (TkMacOSXInitCarbonEvents): added newly
	registered kEventAppAvailableWindowBoundsChanged to debugging code.

2005-11-30  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tkImgGIF.c: cast calls to block_out

	* win/Makefile.in: place TCL_BIN_DIR first in PATH for targets to
	get Tcl built dll first.

	* tests/scrollbar.test (6.22): fix rounding-error sensitive test

	* tests/textWind.test: use "Courier -12" on all platforms.
	Reduces Windows XP test errors in that file from 9 to 2 (13.2 and
	13.9 still off-by-one pixel).

	* win/tkWinWm.c (UpdateWrapper): Don't install frame menu on dead
	window.  Backport of 1233635

	* generic/tkEvent.c: fix handling of ClientMessage handlers.
	[Bug 1289565 983920]

	* macosx/tkMacOSXEvent.h: define
	kEventAppAvailableWindowBoundsChanged for OS X < 10.3.

2005-11-29  Jeff Hobbs  <jeffh@ActiveState.com>

	* library/console.tcl (::tk::ConsoleInit): improve work-around to
	avoid '% ' from tclMain.c [Bug 1252259]

	* macosx/tkMacOSXXStubs.c (TkpOpenDisplay, TkMacOSXDisplayChanged):
	* macosx/tkMacOSXCarbonEvents.c (TkMacOSXInitCarbonEvents):
	* macosx/tkMacOSXWindowEvent.c (TkMacOSXProcessApplicationEvent):
	* macosx/tkMacOSXInt.h: Trap kEventAppAvailableWindowBoundsChanged
	event to watch for change in display size and adjust internal
	state appropriately.

	* win/tcl.m4:      Add build support for Windows-x64 builds.
	* win/configure:   --enable-64bit now accepts =amd64|ia64 for
	* win/Makefile.in: Windows 64-bit build variants (default: amd64)
	* win/makefile.vc: [Bug 1369597]
	* win/configure.in:
	* win/wish.exe.manifest.in (new):     manifest must map in MACHINE
	* win/rc/wish.exe.manifest (removed): and VERSION to be correct.

2005-11-27  Daniel Steffen  <das@users.sourceforge.net>
